<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">invitation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_section_invitation">Invitación</string>
    <string name="title_section_guests">Invitados</string>
    <string name="title_section_emplacement">Información</string>
    <string name="button_paper_invitation_enabled">Quiero recibir mi invitación en papel</string>
    <string name="button_paper_invitation_disabled">Descuida, te la enviaremos lo antes posible :)</string>

    <string name="dialog_lang_message">¿En qué idioma quieres recibir la invitación?</string>
    <string name="dialog_lang_cast">Castellano</string>
    <string name="dialog_lang_cat">Català</string>
    <string name="dialog_menu_message">Ups! No hemos podido guardar tus preferencias debido a un error, por favor, vuelve a intentarlo más tarde.</string>

    <string name="ok">OK</string>

    <string name="error_request_invitation_message">error_request_invitation_message</string>
    <string name="error_request_paper_invitation">error_request_paper_invitation</string>

    <string name="menu_button">Selecciona tu menú</string>
    <string name="menu_meat">Plato de Carne</string>
    <string name="menu_fish">Plato de Pescado</string>
    <string name="menu_veggie">Plato Vegano</string>
    <string name="menu_child">Menú Infantil</string>
    <string name="menu_other">Otros (indícanos si tienes alguna preferencia diferente o alguna alergia a tener en cuenta)</string>
    <string name="menu_other_placeholder">Otras preferencias...</string>
    <string name="menu_save">Guardar cambios</string>
    <string name="qr_desc">Ahora solo tienes que escanear el código QR que te hemos entregado.</string>
    <string name="qr_button">Escanear</string>
    <string name="qr_popup_title">Ningún escaner encontrado</string>
    <string name="qr_popup_message">¿Descargar una aplicación para escanear códigos QR?</string>
    <string name="qr_popup_yes_button">Sí</string>
    <string name="qr_popup_no_button">No</string>
    <string name="info_date_title">Fecha</string>
    <string name="info_date">27 de junio de 2015</string>
    <string name="info_time_title">Hora</string>
    <string name="info_time">18:30</string>
    <string name="info_place_title">Lugar</string>
    <string name="info_place">El Jardí de les Palmeres</string>
    <string name="info_maps">Obtener indicaciones en Google Maps</string>

</resources>
