<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/menu_meat"
                android:gravity="left|center_vertical"
                android:textColor="@color/theme_pink"/>

            <Button
                android:id="@+id/buttonFish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/menu_fish"
                android:gravity="left|center_vertical"
                android:textColor="@color/theme_pink"/>

            <Button
                android:id="@+id/buttonVeggie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/menu_veggie"
                android:gravity="left|center_vertical"
                android:textColor="@color/theme_pink"/>

            <Button
                android:id="@+id/buttonChild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/menu_child"
                android:gravity="left|center_vertical"
                android:textColor="@color/theme_pink"/>

            <Button
                android:id="@+id/buttonOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/menu_other"
                android:gravity="left|center_vertical"
                android:textColor="@color/theme_pink"/>

            <EditText
                android:id="@+id/editTextOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:enabled="false"
                android:hint="@string/menu_other_placeholder"
                android:textColor="@color/theme_pink"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/theme_purple"
        android:text="@string/menu_save"
        android:gravity="center"
        android:textColor="@color/theme_color"/>

</RelativeLayout>